# openvx-ios

./: README.md
lib/: LICENSE
lib/Release-iphoneos/OpenVX.framework/Versions/A/: OpenVX
lib/Release-iphoneos/libinvx.framework/: Info.plist  libinvx
lib/Release-iphoneos/libinvx.framework/_CodeSignature/: CodeResources
lib/Release-iphoneos/libopenvx-cmodel.framework/: Info.plist  libopenvx-cmodel
lib/Release-iphoneos/libopenvx-cmodel.framework/_CodeSignature/: CodeResources
lib/Release-iphoneos/libopenvx-extras.framework/: Info.plist  libopenvx-extras
lib/Release-iphoneos/libopenvx-extras.framework/_CodeSignature/: CodeResources
lib/Release-iphonesimulator/OpenVX.framework/: OpenVX
lib/Release-iphonesimulator/OpenVX.framework/Versions/A/: OpenVX
lib/Release-iphonesimulator/libinvx.framework/: Info.plist  libinvx
lib/Release-iphonesimulator/libinvx.framework/_CodeSignature/: CodeResources
lib/Release-iphonesimulator/libopenvx-cmodel.framework/: Info.plist  libopenvx-cmodel
lib/Release-iphonesimulator/libopenvx-cmodel.framework/_CodeSignature/: CodeResources
lib/Release-iphonesimulator/libopenvx-extras.framework/: Info.plist  LICENSE.txt  libopenvx-extras
lib/Release-iphonesimulator/libopenvx-extras.framework/_CodeSignature/: CodeResources
lib/openvx/: .gitignore  Build.py  CMakeLists.txt  README.md  circle.yml  travis.yml
lib/openvx/assets/: make_favicon.sh
lib/openvx/assets/app-icons/android-icons/: resize.sh
lib/openvx/assets/app-icons/ios-icons/: README.txt
lib/openvx/build-ios/: Info.plist  README.md  build-script.sh  install-keychain.sh  package_ios.sh  uninstall-keychain.sh
lib/openvx/build-ios/OpenVX.xcodeproj/: project.pbxproj
lib/openvx/build-ios/OpenVXTests/: Info.plist  OpenVXTests.mm
lib/openvx/build-ios/VxTest/: AppDelegate.h  AppDelegate.m  OpenVXTests.h  OpenVXTests.m  ViewController.h  ViewController.m  main.m
lib/openvx/build-ios/certs/: Tims.mobileprovision  dev.cer  dev.p12  dist.cer  dist.p12
lib/openvx/build-macos/: README.md  vxtest.cpp
lib/openvx/cmake_utils/: CMakeFuncs.txt  CMake_android_tools.cmake  CMake_apple_tools.cmake  CMake_linux_tools.cmake  CMake_windows_tools.cmake
lib/openvx/debug/: CMakeLists.txt  vx_debug.c
lib/openvx/examples/: CMakeLists.txt
lib/openvx/helper/: CMakeLists.txt
lib/openvx/include/: CMakeLists.txt
lib/openvx/include/OpenVX/: vx_debug.h
lib/openvx/kernels/: CMakeLists.txt
lib/openvx/kernels/c_model/: CMakeLists.txt
lib/openvx/kernels/debug/: CMakeLists.txt
lib/openvx/kernels/extras/: CMakeLists.txt
lib/openvx/libraries/: CMakeLists.txt
lib/openvx/libraries/debug/: CMakeLists.txt
lib/openvx/libraries/extras/: CMakeLists.txt
lib/openvx/release/ios/: README.md
lib/openvx/sample/: CMakeLists.txt
lib/openvx/sample/framework/: CMakeLists.txt  vx_context.c  vx_graph.c  vx_osal.c
lib/openvx/sample/include/: vx_internal.h
lib/openvx/sample/targets/: CMakeLists.txt
lib/openvx/sample/targets/accelerate/: CMakeLists.txt  README.md  vx_absdiff.c  vx_accumulate.c  vx_accumulatesquared.c  vx_accumulateweighted.c  vx_add.c  vx_and.c  vx_box.c  vx_canny.c  vx_channelcombine.c  vx_channelextract.c  vx_colorconvert.c  vx_convertdepth.c  vx_convolution.c  vx_dilate.c  vx_equalizehistogram.c  vx_erode.c  vx_fastcorners.c  vx_gaussian.c  vx_gaussianpyramid.c  vx_halfscalegaussian.c  vx_harris.c  vx_histogram.c  vx_integralimage.c  vx_interface.c  vx_interface.h  vx_magnitude.c  vx_meanstddev.c  vx_median.c  vx_minmaxloc.c  vx_multiply.c  vx_not.c  vx_optpyrlk.c  vx_or.c  vx_phase.c  vx_remap.c  vx_scale.c  vx_sobel.c  vx_subtract.c  (+5 more)
lib/openvx/sample/targets/accelerate/debug/: vx_copy.c  vx_file.c
lib/openvx/sample/targets/accelerate/extras/: vx_filter.c  vx_nonmax.c
lib/openvx/sample/tests/: CMakeLists.txt  vx_test.c
lib/openvx/sample/vxu/: CMakeLists.txt
lib/openvx/test/: CMakeLists.txt
lib/openvx/test/data/: colour_mandrill_512_512_RGB.ppm
lib/openvx/test/include/: vxtest.h
lib/openvx/test/lib/gtest-1.7.0/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/xcuserdata/tim.xcuserdatad/xcschemes/: xcschememanagement.plist
lib/openvx/test/lib/gtest-1.7.0/xcode/gtest.xcodeproj/: project.pbxproj
lib/openvx/test/lib/gtest-1.7.0/xcode/gtest.xcodeproj/project.xcworkspace/xcshareddata/: gtest.xccheckout
lib/openvx/test/lib/gtest-1.7.0/xcode/gtest.xcodeproj/project.xcworkspace/xcuserdata/tim.xcuserdatad/: UserInterfaceState.xcuserstate
lib/openvx/test/lib/gtest-1.7.0/xcode/gtest.xcodeproj/xcuserdata/tim.xcuserdatad/xcschemes/: gtest-framework.xcscheme  xcschememanagement.plist
lib/openvx/test/src/: CMakeLists.txt  test_vx_absdiff.cpp  test_vx_accumulate.cpp  test_vx_accumulatesquared.cpp  test_vx_accumulateweighted.cpp  test_vx_add.cpp  test_vx_and.cpp  test_vx_box.cpp  test_vx_canny.cpp  test_vx_channelcombine.cpp  test_vx_channelextract.cpp  test_vx_colorconvert.cpp  test_vx_convertdepth.cpp  test_vx_convolution.cpp  test_vx_dilate.cpp  test_vx_equalize_hist.cpp  test_vx_erode.cpp  test_vx_fastcorners.cpp  test_vx_gaussian.cpp  test_vx_gaussianpyramid.cpp  test_vx_halfscalegaussian.cpp  test_vx_harris.cpp  test_vx_histogram.cpp  test_vx_integralimage.cpp  test_vx_magnitude.cpp  test_vx_meanstddev.cpp  test_vx_median.cpp  test_vx_minmaxloc.cpp  test_vx_multiply.cpp  test_vx_not.cpp  test_vx_optpyrlk.cpp  test_vx_or.cpp  test_vx_phase.cpp  test_vx_remap.cpp  test_vx_scale.cpp  test_vx_sobel.cpp  test_vx_subtract.cpp  test_vx_tablelookup.cpp  test_vx_threshold.cpp  test_vx_warpaffine.cpp  (+2 more)
lib/openvx/tools/: CMakeLists.txt
lib/openvx/tools/pgm2hdr/: CMakeLists.txt
lib/openvx/tools/query/: CMakeLists.txt
lib/openvx/website/: CNAME  README.md  index.html
lib/openvx/website/about/: index.html  invx.html
lib/openvx/website/android/: index.html
lib/openvx/website/css/: landing-page.css
lib/openvx/website/ios/: index.html
vxview/src/: AppDelegate.m  EdgesShader.fsh  EdgesShader.vsh  VideoShader.fsh  VideoShader.vsh
vxview/src/Images.xcassets/LaunchImage.launchimage/: Contents.json
vxview/vxview.xcodeproj/: project.pbxproj
(+59 files in other folders)
